<resources>
    <string name="app_name">Ski Jump</string>
    <string name="norway">Norway</string>
    <string name="germany">Germany</string>
    <string name="points60">60 points</string>
    <string name="points120">120 points</string>
    <string name="jumping_style">Jumping style</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="result">Ski Jump final result</string>
    <string name="winner">The winner is</string>
    <string name="start_competition">The competition has not started yet</string>
    <string name="no_winner">Draw game! There is no winner.</string>

</resources>
