<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="horizontal"
    tools:context="com.example.android.courtcounter.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:context="com.example.android.courtcounter.MainActivity">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    tools:context="com.example.android.courtcounter.MainActivity">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="4dp"
                        android:text="@string/norway"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/normalText"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/no" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10"
                        android:padding="4dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10"
                        android:text="@string/jumping_style"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@color/colorPrimary"
                            android:onClick="addOneForNo"
                            android:text="+"
                            android:textColor="@color/colorWhite"></Button>

                        <Button
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@color/colorPrimary"
                            android:onClick="removeOneForNo"
                            android:text="-"
                            android:textColor="@color/colorWhite"></Button>
                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/colorPrimary"
                        android:onClick="addSixtyForNo"
                        android:text="@string/points60"
                        android:textColor="@color/colorWhite"></Button>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/colorPrimary"
                        android:onClick="addOneHundredTwentyForNo"
                        android:text="@string/points120"
                        android:textColor="@color/colorWhite"></Button>


                </LinearLayout>

                <View
                    android:layout_width="@dimen/size1"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"></View>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    tools:context="com.example.android.courtcounter.MainActivity">

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="80dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    tools:context="com.example.android.courtcounter.MainActivity">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="4dp"
                        android:text="@string/germany"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/normalText"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/de" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10"
                        android:padding="4dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10"
                        android:text="@string/jumping_style"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@color/colorPrimary"
                            android:onClick="addOneForDe"
                            android:text="+"
                            android:textColor="@color/colorWhite"></Button>

                        <Button
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@color/colorPrimary"
                            android:onClick="removeOneForDe"
                            android:text="-"
                            android:textColor="@color/colorWhite"></Button>
                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/colorPrimary"
                        android:onClick="addSixtyForDe"
                        android:text="@string/points60"
                        android:textColor="@color/colorWhite"></Button>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/colorPrimary"
                        android:onClick="addOneHundredTwentyForDe"
                        android:text="@string/points120"
                        android:textColor="@color/colorWhite"></Button>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        tools:context="com.example.android.courtcounter.MainActivity">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/size10"
            android:background="@color/colorOrange"
            android:onClick="resetScore"
            android:text="@string/reset"
            android:textColor="@color/colorBlack"></Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/size10"
            android:background="@color/colorGreen"
            android:onClick="displayResult"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"></Button>
    </LinearLayout>
</RelativeLayout>